--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "dotenv": "^16.0.3",
     "framer-motion": "^6.5.1",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
