--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "dotenv": "^16.0.3",
     "framer-motion": "^6.5.1",
+    "lucide-react": "^0.552.0",
     "next": "^13.0.6",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.8.0",
